--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,23 @@
 	    <version>1.9.2</version>
 	</dependency>
   </dependencies>
+	
+	
+<repositories>
+    <repository>  
+        <id>maven-ali</id>  
+        <url>http://maven.aliyun.com/nexus/content/groups/public</url>;  
+        <releases>  
+            <enabled>true</enabled>  
+        </releases>  
+        <snapshots>  
+            <enabled>true</enabled>  
+            <updatePolicy>always</updatePolicy>  
+            <checksumPolicy>fail</checksumPolicy>  
+        </snapshots>  
+    </repository>  
+</repositories>
+
   <build>
     <finalName>Blog</finalName>
   </build>
