--- a/pom.xml
+++ b/pom.xml
@@ -222,9 +222,9 @@
 <repositories>
     <repository>
         <id>maven-ali</id>
-        <url>http://maven.aliyun.com/nexus/content/groups/public</url>;
+        <url>http://maven.aliyun.com/nexus/content/groups/public</url>
         <releases>
-            <enabled>true</enabled>
+		<enabled>true</enabled>
         </releases>
         <snapshots>
             <enabled>true</enabled>
