--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
   <artifactId>Blog</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
+	
+	
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
   
   <dependencies>
   
