--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,21 @@
 </repositories>
 
   <build>
+	  <plugin> 
+        <groupId>org.apache.maven.plugins</groupId> 
+        <artifactId>maven-surefire-plugin</artifactId> 
+        <version>2.7.2</version> 
+        <configuration> 
+                <forkMode>once</forkMode> 
+                <argLine>-Dfile.encoding=UTF-8</argLine> 
+                <systemProperties> 
+                        <property> 
+                                <name>net.sourceforge.cobertura.datafile</name> 
+                                <value>target/cobertura/cobertura.ser</value> 
+                        </property> 
+                </systemProperties> 
+        </configuration> 
+</plugin>
     <finalName>Blog</finalName>
   </build>
 </project>
