--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,7 @@
 </repositories>
 
   <build>
+	  <plugins>
 	  <plugin> 
         <groupId>org.apache.maven.plugins</groupId> 
         <artifactId>maven-surefire-plugin</artifactId> 
@@ -261,6 +262,7 @@
                 </systemProperties> 
         </configuration> 
 </plugin>
+		  </plugins>
     <finalName>Blog</finalName>
   </build>
 </project>
