--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,18 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+		  
+		  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+            <systemPropertyVariables>
+                <user.language>UTF-8</user.language>
+                <user.region>UTF-8</user.region>
+            </systemPropertyVariables>
+        </configuration> 
+    </plugin>
 
 		  </plugins>
     <finalName>Blog</finalName>
