--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	
 	
   <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	  <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <project.build.sourceEncoding>gbk</project.build.sourceEncoding>
+	  <maven.compiler.encoding>gbk</maven.compiler.encoding>
     </properties>
 	
 	
